add mobile styles for pages

--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -57,7 +57,7 @@ em {
   color: $black;
 }
 
-.orange-row img {
+body.page-id-290 .orange-row img {
   border: 10px solid $white;
 }
 
@@ -126,6 +126,7 @@ body.page-id-45 .heading-container {
   width: 300px;
   top: 75px;
   transform: rotate(-5deg);
+  padding: 32px 20px 23px;
 
   @include media-breakpoint-down(xs) {
     left: 50%;
