add mobile styles for newsletter box

--- a/resources/assets/styles/layouts/_pages.scss
+++ b/resources/assets/styles/layouts/_pages.scss
@@ -23,6 +23,7 @@ body.page-id-45 .wrap.container-fluid {
 
   @include media-breakpoint-down(xs) {
     padding-top: 5em;
+    padding-bottom: 5em;
   }
 }
 
