add mobile styles for newsletter box

--- a/resources/assets/styles/components/_slider.scss
+++ b/resources/assets/styles/components/_slider.scss
@@ -4,6 +4,10 @@
   padding-bottom: 9em;
   margin-top: 8em;
   background-color: $primary;
+
+  @include media-breakpoint-down(xs) {
+    padding-bottom: 16em;
+  }
 }
 
 .swiper-container {
