--- a/resources/assets/styles/layouts/_archive.scss
+++ b/resources/assets/styles/layouts/_archive.scss
@@ -9,6 +9,10 @@ body.archive .wrap.container-fluid {
 
     > .row {
       align-items: flex-start;
+
+      @include media-breakpoint-down(xs) {
+        padding-bottom: 10em;
+      }
     }
   }
 
