--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -26,13 +26,25 @@ h1 {
 p a {
   color: $black;
   border-bottom: 1px dotted $primary !important;
-  padding: 2px;
   transition: $transition-default;
 
   &:hover,
   &:focus {
     text-decoration: none;
     color: $primary;
+  }
+}
+
+.orange-row p a,
+.orange-row ul a {
+  color: $black;
+  font-weight: 400;
+  border-bottom: 1px dotted $black !important;
+
+  &:hover,
+  &:focus {
+    text-decoration: none;
+    color: $black;
   }
 }
 
@@ -44,7 +56,7 @@ strong {
 
 .orange-row b,
 .orange-row strong {
-  font-weight: 400;
+  font-weight: 700;
   color: $black;
 }
 
