add mobile styles

--- a/resources/assets/styles/layouts/_footer.scss
+++ b/resources/assets/styles/layouts/_footer.scss
@@ -83,7 +83,7 @@ footer {
       position: absolute;
       bottom: 0;
       color: $white;
-      padding: 1px;
+      padding: 0;
       border-bottom: 1px dotted $white !important;
 
       &:hover {
