--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -10,12 +10,23 @@ img {
   width: 100%;
 }
 
+.img-bordered img,
+.gallery img {
+  border: 10px solid $white;
+}
+
 h1,
-h2,
 h3,
 h4,
 h5 {
   font-family: $headings-ff;
+}
+
+h2 {
+  font-family: $text-ff;
+  font-size: 20px;
+  line-height: 1.5;
+  color: $primary;
 }
 
 h1 {
@@ -56,7 +67,7 @@ strong {
 
 .orange-row b,
 .orange-row strong {
-  font-weight: 700;
+  font-weight: 400;
   color: $black;
 }
 
@@ -91,6 +102,7 @@ body:not(.home):not(.archive) .wrap.container-fluid {
 
   @include media-breakpoint-up(md) {
     width: 80%;
+    max-width: 1200px;
   }
 
   @include media-breakpoint-down(md) {
@@ -143,6 +155,12 @@ body.page-id-45 .heading-container {
   @include media-breakpoint-down(xs) {
     left: 50%;
     transform: rotate(-5deg) translateX(-45%);
+  }
+}
+
+body.page-id-290 .heading-container {
+  @include media-breakpoint-down(xs) {
+    top: 45px;
   }
 }
 
